[gd_scene load_steps=22 format=3 uid="uid://byoikuyfq74cj"]

[ext_resource type="Script" uid="uid://c12vti6022ji0" path="res://Scripts/Root.gd" id="1_difym"]
[ext_resource type="PackedScene" uid="uid://vrlj2y515uph" path="res://Scenes/Buffs Scenes/BacteriaMinion.tscn" id="2_difym"]
[ext_resource type="PackedScene" uid="uid://djwlm556wwhom" path="res://Scenes/Enemy Scenes/BossMinion.tscn" id="3_am7h6"]
[ext_resource type="AudioStream" uid="uid://cqpksp7a7v4qp" path="res://Assets/Sound Design/SFX/DamageSFX/BossHitSFX.wav" id="8_fauc5"]
[ext_resource type="PackedScene" uid="uid://cxqykb82x7b5d" path="res://Scenes/Player.tscn" id="8_m1xq0"]
[ext_resource type="Texture2D" uid="uid://4l08p5pi7edm" path="res://Assets/Backgrounds/CERVIX SPERM GAME BACKGROUND V3.png" id="9_jcrtk"]
[ext_resource type="AudioStream" uid="uid://d1ef886jlby15" path="res://Assets/Sound Design/SFX/PlayerShootingSFX.wav" id="10_8btxg"]
[ext_resource type="AudioStream" uid="uid://dmoykrnncoeb3" path="res://Assets/Sound Design/SFX/DamageSFX/PlayerHitSFX.wav" id="11_lbgny"]
[ext_resource type="AudioStream" uid="uid://d0c6trblj1p3t" path="res://Assets/Sound Design/SFX/DamageSFX/EnemyHit SFX.wav" id="12_asw58"]
[ext_resource type="AudioStream" uid="uid://clwvwh7clcc0p" path="res://Assets/Sound Design/SFX/Death SFX/Pixel Swimmer Player Death Sound SFX.wav" id="13_rcb2t"]
[ext_resource type="PackedScene" uid="uid://k62jq2k7i63l" path="res://Scenes/Menu Scenes/LevelCompletedScreen.tscn" id="14_75oan"]
[ext_resource type="FontFile" uid="uid://dyavrxg7xjiev" path="res://Assets/Fonts/Daydream DEMO.otf" id="14_difym"]
[ext_resource type="PackedScene" uid="uid://bnjwk32m2suwc" path="res://Scenes/UI Scenes/hud.tscn" id="15_ijev8"]
[ext_resource type="Texture2D" uid="uid://bgvie58h567jd" path="res://Assets/Menu Buttons/Pause BUTTON (not Hovered).png" id="16_path1"]
[ext_resource type="PackedScene" uid="uid://b42o5vtp8dpl2" path="res://Scenes/Menu Scenes/LevelFailedScreen.tscn" id="17_626no"]
[ext_resource type="Texture2D" uid="uid://dgwpep3vmh6sf" path="res://Assets/Menu Buttons/Pause BUTTON (Hovered).png" id="17_okppc"]
[ext_resource type="PackedScene" uid="uid://ctmnc8vem7jt0" path="res://Scenes/Menu Scenes/pause_menu.tscn" id="18_0dy5o"]
[ext_resource type="PackedScene" uid="uid://duxr3xb44n25m" path="res://Scenes/Menu Scenes/Chapters/ChapterCompleteScreen.tscn" id="18_6ebx2"]
[ext_resource type="PackedScene" uid="uid://dcen0c2824kuh" path="res://Scenes/Menu Scenes/game_over_screen.tscn" id="19_7j4pg"]
[ext_resource type="Texture2D" uid="uid://dufgfdbx8t0xd" path="res://Assets/Still PIXELS/bubble particle VERY SMALL.png" id="20_r2ss6"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ldgsr"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(270, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = -1000.0
initial_velocity_max = -1000.0
angular_velocity_min = -1.6093254e-05
angular_velocity_max = -1.6093254e-05
gravity = Vector3(0, 98, 0)
scale_max = 3.0
anim_speed_min = -1000.0

[node name="Root" type="Node2D"]
script = ExtResource("1_difym")
bacteria_minion_scene = ExtResource("2_difym")
boss_minion_scene = ExtResource("3_am7h6")
player_scene = ExtResource("8_m1xq0")

[node name="Player" parent="." instance=ExtResource("8_m1xq0")]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="LaserContainer" type="Node2D" parent="." groups=["player"]]

[node name="BuffContainer" type="Node2D" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 1.2999999999999998
autostart = true

[node name="StoryEnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="BuffSpawnTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(275, 851)

[node name="MinionSpawnPoint" type="Marker2D" parent="."]
position = Vector2(380, 851)

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(0, 958.865)
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="Parallax2D"]
z_index = -1
texture_repeat = 2
scale = Vector2(0.52734375, 0.62434894)
texture = ExtResource("9_jcrtk")
centered = false
region_rect = Rect2(0, 0, 540, 960)
metadata/_edit_lock_ = true

[node name="SFX" type="Node2D" parent="."]

[node name="PlayerShooting" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("10_8btxg")
bus = &"SfxBus"

[node name="PlayerHit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("11_lbgny")
bus = &"SfxBus"

[node name="EnemyHit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("12_asw58")
bus = &"SfxBus"

[node name="BossHit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_fauc5")
volume_db = -10.0
bus = &"SfxBus"

[node name="PlayerDeath" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("13_rcb2t")
volume_db = -10.0
bus = &"SfxBus"

[node name="BuffSfxPlayer" type="AudioStreamPlayer" parent="SFX"]
volume_db = -6.0
bus = &"SfxBus"

[node name="DeathSfxPlayer" type="AudioStreamPlayer" parent="SFX"]
volume_db = -2.0
bus = &"SfxBus"

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("15_ijev8")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_top = 35.0
offset_bottom = 35.0
grow_vertical = 1

[node name="PauseButton" type="TextureButton" parent="UILayer/HUD" groups=["player"]]
z_index = 12
layout_mode = 0
offset_left = 208.0
offset_top = 0.99999964
offset_right = 308.0
offset_bottom = 101.0
scale = Vector2(0.5843101, 0.61272013)
texture_normal = ExtResource("16_path1")
texture_pressed = ExtResource("17_okppc")

[node name="LevelLabel" type="Label" parent="UILayer/HUD"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = 366.0
offset_right = 15.0
offset_bottom = 392.0
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.84705883, 0.74509805, 0.16862746, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("14_difym")

[node name="KillLabel" type="Label" parent="UILayer/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -77.0
offset_top = 16.0
offset_right = 95.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.84705883, 0.74509805, 0.16862746, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("14_difym")

[node name="PauseMenu" parent="UILayer" instance=ExtResource("18_0dy5o")]
visible = false

[node name="LevelCompletedScreen" parent="UILayer" instance=ExtResource("14_75oan")]
visible = false

[node name="LevelFailedScreen" parent="UILayer" instance=ExtResource("17_626no")]
visible = false

[node name="GameOverScreen" parent="UILayer" instance=ExtResource("19_7j4pg")]
visible = false

[node name="ChapterCompleteScreen" parent="UILayer" instance=ExtResource("18_6ebx2")]
visible = false

[node name="BubbleParticles" type="GPUParticles2D" parent="."]
position = Vector2(270, -50)
amount = 3
texture = ExtResource("20_r2ss6")
process_material = SubResource("ParticleProcessMaterial_ldgsr")

[node name="StarParticles" type="GPUParticles2D" parent="."]
position = Vector2(270, -50)
amount = 20
process_material = SubResource("ParticleProcessMaterial_ldgsr")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 535.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="StoryEnemySpawnTimer" to="." method="_on_story_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="BuffSpawnTimer" to="." method="_on_buff_spawn_timer_timeout"]
[connection signal="pressed" from="UILayer/HUD/PauseButton" to="." method="_on_pause_button_pressed"]
